# Default_Companies

./: .gitignore  README.md  pyproject.toml
app/: app.py
notebooks/: ML_comparison.ipynb  correlation_study.ipynb  feature_selection.ipynb  shap_analysis.ipynb
src/bpi_fr_algo_credit_scoring/: conf.py  data_pipeline.py  feature_engineering.py  main.py  model.py  reader.py
tests/: conftest.py  test_feature_engineering.py  test_model.py  test_reader.py
tests/data/: new_comp_data.csv
